# Vibration-Analysis-for-Anomaly-Detection-in-UAVs

./: .gitignore  README.md  requirements.txt  zephyr_notes.md
app/: CMakeLists.txt  prj.conf
app/boards/: nrf52840_blip.overlay
app/src/: common.h  main.c
app/src/accelerometer/: accelerometer.c  accelerometer.h
app/src/accelerometer/lis2dh12/: lis2dh12.c  lis2dh12.h
app/src/esc_pwm/: esc_pwm.c  esc_pwm.h
app/src/service_template/: service_template.c  service_template.h  service_template_alt.c
app/src/shell_debug/: lis2dh12_shell_debug.c
app/src/tester/: tester.c  tester_config.h  tester_producer_consumerc
app/src/tester_python/: tester_python.c
app/src/writer/: writer.c  writer.h
app/src/writer/disk/: disk.c  disk.h
serial_writer/: debug.py  main.py  serial_wrapper.py  tester.py  tester_config.py
zephyr_samples/blinky/src/: main.c
zephyr_samples/blinky_pwm/: CMakeLists.txt
zephyr_samples/blinky_pwm/boards/: nrf52840_blip.overlay
zephyr_samples/blinky_pwm/src/: main.c
zephyr_samples/fat_fs/: prj.conf
zephyr_samples/fat_fs/boards/: nrf52840_blip.overlay
zephyr_samples/fat_fs/src/: main.c
zephyr_samples/hello_world/: CMakeLists.txt
zephyr_samples/shell/: CMakeLists.txt  prj.conf
zephyr_samples/shell/src/: main.c
zephyr_samples/shell_custom_commands/: CMakeLists.txt
zephyr_samples/shell_custom_commands/src/: main.c
zephyr_samples/thread_blinky/: CMakeLists.txt
zephyr_samples/thread_blinky/src/: main.c
